updated references and added section and formatting to paper

--- a/references.bib
+++ b/references.bib
@@ -1,88 +1,181 @@
-@misc{dlotko2019macroeconomy,
-      title={Topologically Mapping the Macroeconomy},
-      author={Paweł Dłotko and Simon Rudkin and Wanling Qiu},
-      year={2019},
-      eprint={1911.10476},
-      archivePrefix={arXiv},
-      primaryClass={econ.EM},
-      url={https://arxiv.org/abs/1911.10476},
+% Reference 1
+@article{madukpe2025mapper,
+  title = {A Comprehensive Review of the {M}apper Algorithm, a Topological Data Analysis Technique, and Its Applications Across Various Fields (2007–2025)},
+  author = {Madukpe, Vine Nwabuisi and Ugoala, Bright Chukwuma and Zulkepli, Nur Fariha Syaqina},
+  year = {2025},
+  journal = {arXiv preprint arXiv:2504.09042},
+  url = {https://arxiv.org/abs/2504.09042},
+  note = {accessed January 2026}
 }
 
-@book{Moosa2017,
-  title = {Econometrics as a Con Art},
-  ISBN = {9781785369957},
-  url = {http://dx.doi.org/10.4337/9781785369957},
-  DOI = {10.4337/9781785369957},
-  publisher = {Edward Elgar Publishing},
-  author = {Moosa,  Imad},
-  pages     = "1--30",
-  year = {2017}
-}
-
-@article{dlotko2019ballmapper,
-      title={Ball mapper: a shape summary for topological data analysis},
-      author={Paweł Dłotko},
-      year={2019},
-      eprint={1901.07410},
-      archivePrefix={arXiv},
-      primaryClass={math.AT},
-      url={https://arxiv.org/abs/1901.07410},
-}
-
-@misc{dlotko2022tdabmfinance,
-      title={Topological Data Analysis Ball Mapper for Finance},
-      author={Pawel Dlotko and Wanling Qiu and Simon Rudkin},
-      year={2022},
-      eprint={2206.03622},
-      archivePrefix={arXiv},
-      primaryClass={q-fin.GN},
-      url={https://arxiv.org/abs/2206.03622},
-}
-
-@article{dlotko2019financialratiosstockreturns,
-      title={Financial ratios and stock returns reappraised through a topological data analysis lens},
-      author={Paweł Dłotko and Wanling Qiu and Simon Rudkin},
-      year={2019},
-      eprint={1911.10297},
-      archivePrefix={arXiv},
-      primaryClass={q-fin.ST},
-      url={https://arxiv.org/abs/1911.10297},
-}
-
-@article{Dlotko2021,
-  title = {Financial ratios and stock returns reappraised through a topological data analysis lens},
-  volume = {30},
-  ISSN = {1466-4364},
-  url = {http://dx.doi.org/10.1080/1351847X.2021.2009892},
-  DOI = {10.1080/1351847x.2021.2009892},
-  number = {1},
-  journal = {The European Journal of Finance},
-  publisher = {Informa UK Limited},
-  author = {Dłotko,  P. and Qiu,  W. and Rudkin,  S. T.},
+% Reference 2
+@article{chazal2021introduction,
+  title = {An Introduction to Topological Data Analysis: Fundamental and Practical Aspects for Data Scientists},
+  author = {Chazal, Frédéric and Michel, Bertrand},
   year = {2021},
-  month = dec,
-  pages = {53–77}
+  journal = {Front. Artif. Intell.},
+  volume = {4},
+  pages = {667963},
+  doi = {10.3389/frai.2021.667963}
 }
 
-@article{Rudkin2023,
-  title = {An economic topology of the Brexit vote},
-  volume = {58},
-  ISSN = {1360-0591},
-  url = {http://dx.doi.org/10.1080/00343404.2023.2204123},
-  DOI = {10.1080/00343404.2023.2204123},
-  number = {3},
-  journal = {Regional Studies},
-  publisher = {Informa UK Limited},
-  author = {Rudkin,  Simon and Barros,  Lucy and Dłotko,  Paweł and Qiu,  Wanling},
+% Reference 3
+@article{dlotko2019ball,
+  title = {Ball mapper: a shape summary for topological data analysis},
+  author = {D{\l}otko, Pawe{\l}},
+  year = {2019},
+  journal = {arXiv preprint arXiv:1901.07410},
+  url = {https://arxiv.org/abs/1901.07410},
+  note = {accessed January 2026}
+}
+
+% Reference 4
+@misc{bea_data,
+  title = {Interactive Data Application},
+  author = {{Bureau of Economic Analysis}},
+  year = {n.d.},
+  url = {https://www.bea.gov/itable},
+  note = {accessed January 2026}
+}
+
+% Reference 5
+@misc{fred_data,
+  title = {Federal Reserve Economic Data (FRED)},
+  author = {{Federal Reserve Bank of St. Louis}},
+  year = {n.d.},
+  url = {https://fred.stlouisfed.org/},
+  note = {accessed January 2026}
+}
+
+% Reference 6
+@manual{bea_r_package,
+  title = {bea.R: Bureau of Economic Analysis API},
+  author = {Batch, Andrea and Chen, Jeff and Kampas, Walt},
+  year = {2018},
+  note = {R package version 1.0.6. Accessed January 2026},
+  url = {https://CRAN.R-project.org/package=bea.R}
+}
+
+% Reference 7
+@manual{fredr_package,
+  title = {fredr: An R Client for the 'FRED' API},
+  author = {Boysel, Sam and Vaughan, Davis},
+  year = {2021},
+  note = {R package version 2.1.0. Accessed January 2026},
+  url = {https://CRAN.R-project.org/package=fredr}
+}
+
+% Reference 8
+@article{hughes2019value,
+  title = {The Value of {US} Government Data to {US} Business Decisions},
+  author = {Hughes-Cromwick, Ellen and Coronado, Julia},
+  year = {2019},
+  journal = {J. Econ. Perspect.},
+  volume = {33},
+  number = {1},
+  pages = {131--146},
+  doi = {10.1257/jep.33.1.131}
+}
+
+% Reference 9
+@misc{dallasfed_nominal,
+  title = {Deflating Nominal Values to Real Values},
+  author = {{Federal Reserve Bank of Dallas}},
+  year = {n.d.},
+  url = {https://www.dallasfed.org/research/basics/nominal},
+  note = {accessed January 2026}
+}
+
+% Reference 10
+@misc{hamilton2014logarithms,
+  title = {Use of logarithms in economics},
+  author = {Hamilton, James D. and Chinn, Menzie},
+  year = {2014},
+  month = {February},
+  url = {https://econbrowser.com/archives/2014/02/use-of-logarithms-in-economics},
+  note = {Econbrowser. Accessed January 2026}
+}
+
+% Reference 11
+@misc{bls_ppi_concepts,
+  title = {Producer Price Indexes: Concepts},
+  author = {{Bureau of Labor Statistics}},
+  year = {2025},
+  month = {July},
+  url = {https://www.bls.gov/opub/hom/ppi/concepts.htm},
+  note = {BLS Handbook of Methods. Accessed January 2026}
+}
+
+% Reference 12
+@article{dlotko2019mapping,
+  title = {Topologically Mapping the Macroeconomy},
+  author = {D{\l}otko, Pawe{\l} and Rudkin, Simon and Qiu, Wanling},
+  year = {2019},
+  journal = {arXiv preprint arXiv:1911.10476},
+  url = {https://arxiv.org/abs/1911.10476},
+  note = {accessed January 2026}
+}
+
+% Reference 13
+@article{kolesnikova2011jobless,
+  title = {Jobless recoveries: causes and consequences},
+  author = {Kolesnikova, Natalia A. and Liu, Yang},
+  year = {2011},
+  journal = {The Regional Economist},
+  month = {April},
+  pages = {18--19},
+  url = {https://www.stlouisfed.org/publications/regional-economist/april-2011/jobless-recoveries-causes-and-consequences},
+  note = {accessed January 2026}
+}
+
+% Reference 14
+@misc{mcclung2024fisher,
+  title = {Fisher Effect},
+  author = {McClung, Sean},
+  year = {2024},
+  month = {September},
+  url = {https://inomics.com/terms/fisher-effect-1545486},
+  note = {INOMICS. Accessed January 2026}
+}
+
+% Reference 15
+@incollection{michaelides2024fisher,
+  title = {The Fisher Equation},
+  author = {Michaelides, Panayotis G.},
+  booktitle = {21 Equations that Shaped the World Economy: Understanding the Theory Behind the Equations},
+  year = {2024},
+  publisher = {Springer},
+  pages = {113--120},
+  doi = {10.1007/978-3-031-76140-9_9},
+  url = {https://link.springer.com/chapter/10.1007/978-3-031-76140-9_9}
+}
+
+% Reference 16
+@misc{bryan2013greatinflation,
+  title = {The Great Inflation},
+  author = {Bryan, Michael},
+  year = {2013},
+  month = {November},
+  url = {https://www.federalreservehistory.org/essays/great-inflation},
+  note = {Federal Reserve History. Accessed January 2026}
+}
+
+% Reference 17
+@misc{stlouisfed2023lags,
+  title = {What Are "Long and Variable Lags" in Monetary Policy?},
+  author = {{Federal Reserve Bank of St. Louis}},
   year = {2023},
-  month = may,
-  pages = {601–618}
+  month = {October},
+  url = {https://www.stlouisfed.org/on-the-economy/2023/oct/what-are-long-variable-lags-monetary-policy},
+  note = {On the Economy Blog. Accessed January 2026}
 }
 
-@misc{investopediaGreatInflation,
-	author = {Leslie Kramer},
-	title = {{T}he {G}reat {I}nflation of the 1970s --- investopedia.com},
-	howpublished = {\url{https://www.investopedia.com/articles/economics/09/1970s-great-inflation.asp}},
-	year = {2024},
-	note = {[Accessed 12-12-2024]},
+% Reference 18
+@misc{corbett2013oilshock,
+  title = {Oil Shock of 1973–74},
+  author = {Corbett, Michael},
+  year = {2013},
+  month = {November},
+  url = {https://www.federalreservehistory.org/essays/oil-shock-of-1973-74},
+  note = {Federal Reserve History. Accessed January 2026}
 }
