added refs and formated in paper

--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,37 @@
 }
 
 % Reference 2
+@article{kemme2025persistent,
+  title = {Persistent Homology: A Pedagogical Introduction with Biological Applications},
+  author = {Kemme, Aurelie Jodelle and Agyingi, Collins Amburo},
+  year = {2025},
+  journal = {arXiv preprint arXiv:2505.06583},
+  url = {https://arxiv.org/abs/2505.06583},
+  note = {accessed January 2026}
+}
+
+% Reference 3
+@misc{trotta2023linear,
+  title = {Mastering Linear Regression: The Definitive Guide For Aspiring Data Scientists},
+  author = {Trotta, Federico},
+  year = {2023},
+  month = {April},
+  url = {https://towardsdatascience.com/mastering-linear-regression-the-definitive-guide-for-aspiring-data-scientists-7abd37fcb9ed/},
+  note = {Towards Data Science. Accessed January 2026}
+}
+
+% Reference 4
+@misc{gfg_probability,
+  title = {Probability Theory},
+  author = {{GeeksforGeeks}},
+  year = {2026},
+  month = {January},
+  day = {10},
+  url = {https://www.geeksforgeeks.org/maths/probability-theory/},
+  note = {Accessed January 2026}
+}
+
+% Reference 5
 @article{chazal2021introduction,
   title = {An Introduction to Topological Data Analysis: Fundamental and Practical Aspects for Data Scientists},
   author = {Chazal, Frédéric and Michel, Bertrand},
@@ -19,7 +50,7 @@
   doi = {10.3389/frai.2021.667963}
 }
 
-% Reference 3
+% Reference 6
 @article{dlotko2019ball,
   title = {Ball mapper: a shape summary for topological data analysis},
   author = {D{\l}otko, Pawe{\l}},
@@ -29,84 +60,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 4
-@misc{bea_data,
-  title = {Interactive Data Application},
-  author = {{Bureau of Economic Analysis}},
-  year = {n.d.},
-  url = {https://www.bea.gov/itable},
-  note = {accessed January 2026}
-}
-
-% Reference 5
-@misc{fred_data,
-  title = {Federal Reserve Economic Data (FRED)},
-  author = {{Federal Reserve Bank of St. Louis}},
-  year = {n.d.},
-  url = {https://fred.stlouisfed.org/},
-  note = {accessed January 2026}
-}
-
-% Reference 6
-@manual{bea_r_package,
-  title = {bea.R: Bureau of Economic Analysis API},
-  author = {Batch, Andrea and Chen, Jeff and Kampas, Walt},
-  year = {2018},
-  note = {R package version 1.0.6. Accessed January 2026},
-  url = {https://CRAN.R-project.org/package=bea.R}
-}
-
 % Reference 7
-@manual{fredr_package,
-  title = {fredr: An R Client for the 'FRED' API},
-  author = {Boysel, Sam and Vaughan, Davis},
-  year = {2021},
-  note = {R package version 2.1.0. Accessed January 2026},
-  url = {https://CRAN.R-project.org/package=fredr}
-}
-
-% Reference 8
-@article{hughes2019value,
-  title = {The Value of {US} Government Data to {US} Business Decisions},
-  author = {Hughes-Cromwick, Ellen and Coronado, Julia},
-  year = {2019},
-  journal = {J. Econ. Perspect.},
-  volume = {33},
-  number = {1},
-  pages = {131--146},
-  doi = {10.1257/jep.33.1.131}
-}
-
-% Reference 9
-@misc{dallasfed_nominal,
-  title = {Deflating Nominal Values to Real Values},
-  author = {{Federal Reserve Bank of Dallas}},
-  year = {n.d.},
-  url = {https://www.dallasfed.org/research/basics/nominal},
-  note = {accessed January 2026}
-}
-
-% Reference 10
-@misc{hamilton2014logarithms,
-  title = {Use of logarithms in economics},
-  author = {Hamilton, James D. and Chinn, Menzie},
-  year = {2014},
-  month = {February},
-  url = {https://econbrowser.com/archives/2014/02/use-of-logarithms-in-economics},
-  note = {Econbrowser. Accessed January 2026}
-}
-
-% Reference 11
-@misc{bls_ppi_concepts,
-  title = {Producer Price Indexes: Concepts},
-  author = {{Bureau of Labor Statistics}},
-  year = {2025},
-  month = {July},
-  url = {https://www.bls.gov/opub/hom/ppi/concepts.htm},
-  note = {BLS Handbook of Methods. Accessed January 2026}
-}
-
-% Reference 12
 @article{dlotko2019mapping,
   title = {Topologically Mapping the Macroeconomy},
   author = {D{\l}otko, Pawe{\l} and Rudkin, Simon and Qiu, Wanling},
@@ -116,19 +70,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 13
-@article{kolesnikova2011jobless,
-  title = {Jobless recoveries: causes and consequences},
-  author = {Kolesnikova, Natalia A. and Liu, Yang},
-  year = {2011},
-  journal = {The Regional Economist},
-  month = {April},
-  pages = {18--19},
-  url = {https://www.stlouisfed.org/publications/regional-economist/april-2011/jobless-recoveries-causes-and-consequences},
-  note = {accessed January 2026}
-}
-
-% Reference 14
+% Reference 8
 @misc{mcclung2024fisher,
   title = {Fisher Effect},
   author = {McClung, Sean},
@@ -138,7 +80,7 @@
   note = {INOMICS. Accessed January 2026}
 }
 
-% Reference 15
+% Reference 9
 @incollection{michaelides2024fisher,
   title = {The Fisher Equation},
   author = {Michaelides, Panayotis G.},
@@ -150,7 +92,127 @@
   url = {https://link.springer.com/chapter/10.1007/978-3-031-76140-9_9}
 }
 
+% Reference 10
+@misc{bls_ppi_cpi_comparison,
+  title = {How Does the Producer Price Index Differ from the Consumer Price Index? Comparing the Personal Consumption {PPI} with the {CPI}},
+  author = {{Bureau of Labor Statistics}},
+  year = {2023},
+  month = {March},
+  url = {https://www.bls.gov/ppi/methodology-reports/comparing-the-producer-price-index-for-personal-consumption-with-the-us-all-items-cpi-for-all-urban-consumers.htm},
+  note = {Methodology Report. Accessed January 2026}
+}
+
+% Reference 11
+@misc{bea_data,
+  title = {Interactive Data Application},
+  author = {{Bureau of Economic Analysis}},
+  year = {n.d.},
+  url = {https://www.bea.gov/itable},
+  note = {accessed January 2026}
+}
+
+% Reference 12
+@misc{fred_data,
+  title = {Federal Reserve Economic Data (FRED)},
+  author = {{Federal Reserve Bank of St. Louis}},
+  year = {n.d.},
+  url = {https://fred.stlouisfed.org/},
+  note = {accessed January 2026}
+}
+
+% Reference 13
+@manual{bea_r_package,
+  title = {bea.R: Bureau of Economic Analysis API},
+  author = {Batch, Andrea and Chen, Jeff and Kampas, Walt},
+  year = {2018},
+  note = {R package version 1.0.6. Accessed January 2026},
+  url = {https://CRAN.R-project.org/package=bea.R}
+}
+
+% Reference 14
+@manual{fredr_package,
+  title = {fredr: An R Client for the 'FRED' API},
+  author = {Boysel, Sam and Vaughan, Davis},
+  year = {2021},
+  note = {R package version 2.1.0. Accessed January 2026},
+  url = {https://CRAN.R-project.org/package=fredr}
+}
+
+% Reference 15
+@article{hughes2019value,
+  title = {The Value of {US} Government Data to {US} Business Decisions},
+  author = {Hughes-Cromwick, Ellen and Coronado, Julia},
+  year = {2019},
+  journal = {J. Econ. Perspect.},
+  volume = {33},
+  number = {1},
+  pages = {131--146},
+  doi = {10.1257/jep.33.1.131}
+}
+
 % Reference 16
+@misc{dallasfed_nominal,
+  title = {Deflating Nominal Values to Real Values},
+  author = {{Federal Reserve Bank of Dallas}},
+  year = {n.d.},
+  url = {https://www.dallasfed.org/research/basics/nominal},
+  note = {accessed January 2026}
+}
+
+% Reference 17
+@misc{hamilton2014logarithms,
+  title = {Use of logarithms in economics},
+  author = {Hamilton, James D. and Chinn, Menzie},
+  year = {2014},
+  month = {February},
+  url = {https://econbrowser.com/archives/2014/02/use-of-logarithms-in-economics},
+  note = {Econbrowser. Accessed January 2026}
+}
+
+% Reference 18
+@misc{bls_ppi_concepts,
+  title = {Producer Price Indexes: Concepts},
+  author = {{Bureau of Labor Statistics}},
+  year = {2025},
+  month = {July},
+  url = {https://www.bls.gov/opub/hom/ppi/concepts.htm},
+  note = {BLS Handbook of Methods. Accessed January 2026}
+}
+
+% Reference 19
+@article{rudkin2025ballmapper,
+  title = {An Introduction to Topological Data Analysis Ball Mapper in R},
+  author = {Rudkin, Simon},
+  year = {2025},
+  journal = {arXiv preprint arXiv:2504.14081},
+  url = {https://arxiv.org/abs/2504.14081},
+  note = {accessed January 2026}
+}
+
+% Reference 20
+@article{qiu2020refining,
+  title = {Refining understanding of corporate failure through a topological data analysis mapping of {A}ltman's {Z}-score model},
+  author = {Qiu, Wanling and Rudkin, Simon and D{\l}otko, Pawe{\l}},
+  year = {2020},
+  journal = {Expert Syst. Appl.},
+  volume = {156},
+  pages = {113475},
+  doi = {10.1016/j.eswa.2020.113475}
+}
+
+% Reference 21
+@article{kolesnikova2011jobless,
+  title = {Jobless recoveries: causes and consequences},
+  author = {Kolesnikova, Natalia A. and Liu, Yang},
+  year = {2011},
+  journal = {The Regional Economist},
+  month = {April},
+  pages = {18--19},
+  url = {https://www.stlouisfed.org/publications/regional-economist/april-2011/jobless-recoveries-causes-and-consequences},
+  note = {accessed January 2026}
+}
+
+% Reference 22
 @misc{bryan2013greatinflation,
   title = {The Great Inflation},
   author = {Bryan, Michael},
@@ -160,7 +222,7 @@
   note = {Federal Reserve History. Accessed January 2026}
 }
 
-% Reference 17
+% Reference 23
 @misc{stlouisfed2023lags,
   title = {What Are "Long and Variable Lags" in Monetary Policy?},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -170,7 +232,7 @@
   note = {On the Economy Blog. Accessed January 2026}
 }
 
-% Reference 18
+% Reference 24
 @misc{corbett2013oilshock,
   title = {Oil Shock of 1973–74},
   author = {Corbett, Michael},
